Add function ```fileExists()```, ```loadJson()```, ```loadConfig()```, ```browser()``` and ```ajax()```

--- a/src/.jshintrc
+++ b/src/.jshintrc
@@ -11,5 +11,12 @@
   "boss": true,
   "eqnull": true,
   "browser": true,
-  "predef": ["jQuery"]
+  "predef": ["jQuery", "ActiveXObject"],
+  "globals": {
+    "console": true,
+    "jQuery": true,
+    "define": true,
+    "module": true,
+    "exports": true
+  }
 }
