--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -7,12 +7,13 @@
   "noarg": true,
   "sub": true,
   "undef": true,
-  "unused": true,
+  "unused": false,
   "boss": true,
   "eqnull": true,
   "browser": true,
   "predef": [
     "jQuery",
+    "$",
     "QUnit",
     "module",
     "test",
@@ -27,6 +28,7 @@
     "notDeepEqual",
     "strictEqual",
     "notStrictEqual",
-    "throws"
+    "throws",
+    "Config"
   ]
 }
